# impulse_sensor

./: .eil.yml  CMakeLists.txt  README.md  idf_component.yml  impulse_sensor.c
.github/workflows/: publish-esp-component.yml  validate-esp-component.yml
docs/: index.rst
examples/default/: CMakeLists.txt  Makefile
examples/default/main/: idf_component.yml  main.c
